--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cmdk": "^1.1.1",
     "convex": "^1.25.4",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.13.3",
     "jotai": "^2.13.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
