--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.23",
     "@auth/core": "0.37.0",
+    "@convex-dev/agent": "^0.2.11",
     "@convex-dev/auth": "^0.0.88",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
